--- a/_data/previous_offering.yml
+++ b/_data/previous_offering.yml
@@ -1,4 +1,6 @@
 offerings:
+  - title: Fall 2024
+    url: https://phonchi.github.io/nsysu-calculus1-2024/
   - title: Fall 2023
     url: https://phonchi.github.io/nsysu-calculus1-2023/
   - title: Fall 2021
