--- a/_data/people.yml
+++ b/_data/people.yml
@@ -4,10 +4,10 @@ instructors:
     webpage: https://math.nsysu.edu.tw/p/406-1183-263491,r2843.php?Lang=zh-tw
 
 teaching_assistants:
-  - name: 張朔祐 (Office 理 SC 2003-2)
+  - name: 張朔祐 (Office 理 SC 1011-1)
     profile_pic: /_images/pp/avatar.png
-    webpage: mailto:5c66031@gmail.com
-  - name: 陳冠羽 (Office 理 SC 1011-3)
+    webpage: mailto:yschang711@gmail.com
+  - name: 陳冠羽 (Office 理 SC 1011-1)
     profile_pic: /_images/pp/avatar.png
     webpage: mailto:ab123456247@gmail.com
 
