--- a/_data/late_policy.yml
+++ b/_data/late_policy.yml
@@ -3,4 +3,4 @@ policies:
   - 注意事項：
   - 1.務必將班級、姓名、學號寫在最前面，字跡請清楚明顯。
   - 2.題號要標示清楚，若有計算過程也需要列出。
-  - 3.如果要補交，請於週五中午12:00前放進助教研究室(理1011-1)門外牛皮紙袋內，分數則會打7折，逾期不開放補交。 
+  - 3.如果要補交，請於隔週一中午12:00前放進助教研究室(理1011-1)門外牛皮紙袋內，分數則會打7折，逾期不開放補交。 
